saint-lascivious.github.io: yet more prefetch/prerender
i want this shit snappy, at the expense of trivial additional load

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/filtereddns.html
+++ b/filtereddns.html
@@ -64,6 +64,13 @@
     <link rel="prefetch" href="reportaproblem.html" as="document">
     <link rel="prerender" href="reportaproblem.html">
 
+    <link rel="prefetch" href="newsandupdates.html" as="document">
+    <link rel="prerender" href="newsandupdates.html">
+    <link rel="prefetch" href="pokedexoverdns.html" as="document">
+    <link rel="prerender" href="pokedexoverdns.html">
+    <link rel="prefetch" href="projects.html" as="document">
+    <link rel="prerender" href="projects.html">
+
     <link rel="dns-prefetch" href="wikipedia.org">
     <link rel="dns-prefetch" href="support.mozilla.org">
     <link rel="dns-prefetch" href="developer.apple.com">
