--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -58,6 +58,13 @@
     <link rel="prefetch" href="reportaproblem.html" as="document">
     <link rel="prerender" href="reportaproblem.html">
 
+    <link rel="prefetch" href="filtereddns.html" as="document">
+    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="pokedexoverdns.html" as="document">
+    <link rel="prerender" href="pokedexoverdns.html">
+    <link rel="prefetch" href="projects.html" as="document">
+    <link rel="prerender" href="projects.html">
+
     <link rel="dns-prefetch" href="pi-hole.net">
     <link rel="dns-prefetch" href="discord.gg">
     <link rel="dns-prefetch" href="github.com">
