--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -58,6 +58,13 @@
     <link rel="prefetch" href="265.html" as="document">
     <link rel="prerender" href="265.html">
 
+    <link rel="prefetch" href="newsandupdates.html" as="document">
+    <link rel="prerender" href="newsandupdates.html">
+    <link rel="prefetch" href="filtereddns.html" as="document">
+    <link rel="prerender" href="filtereddns.html">
+    <link rel="prefetch" href="projects.html" as="document">
+    <link rel="prerender" href="projects.html">
+
     <link rel="dns-prefetch" href="bulbapedia.bulbgarden.net">
     <link rel="dns-prefetch" href="linux.die.net">
     <link rel="dns-prefetch" href="www.nlnetlabs.nl">
