--- a/index.html
+++ b/index.html
@@ -4,170 +4,4 @@
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
-<html lang="en-NZ">
-  <head>
-    <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>sainternet.xyz</title>
-
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
-
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
-    <link rel="icon" sizes="any" href="favicon.ico">
-
-    <link rel="canonical" href="https://sainternet.xyz/index.html">
-    <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz">
-
-    <link rel="preload" as="style" href="resources/stylesheets/material.red-blue.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.red-blue.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/img.min.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <link rel="preload" as="style" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/fontawesome.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/solid.min.css">
-    <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
-
-    <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp">
-    <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp">
-
-    <script type="text/javascript" src="resources/javascript/material.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/random_phrase.min.js" async></script>
-    <script type="text/javascript" src="resources/javascript/sainternet.min.js" async></script>
-
-    <link rel="prefetch" href="newsandupdates.html" as="document">
-    <link rel="prerender" href="newsandupdates.html">
-    <link rel="prefetch" href="filtereddns.html" as="document">
-    <link rel="prerender" href="filtereddns.html">
-    <link rel="prefetch" href="pokedexoverdns.html" as="document">
-    <link rel="prerender" href="pokedexoverdns.html">
-    <link rel="prefetch" href="projects.html" as="document">
-    <link rel="prerender" href="projects.html">
-
-    <link rel="dns-prefetch" href="discord.gg">
-    <link rel="dns-prefetch" href="github.com">
-    <link rel="dns-prefetch" href="www.reddit.com">
-  </head>
-  <body>
-    <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp">
-        <div class="mdl-layout__header-row">
-          <span class="embiggen mdl-layout-title">sainternet.xyz</span>
-          <div class="mdl-layout-spacer"></div>
-          <nav class="mdl-navigation mdl-layout--large-screen-only">
-            <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
-            <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-            <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-            <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-            <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
-          </nav>
-        </div>
-      </header>
-      <div class="mdl-layout__drawer">
-        <span class="embiggen mdl-layout-title">sainternet.xyz</span>
-        <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="#welcome"><b>Home</b></a>
-          <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
-          <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
-        </nav>
-      </div>
-      <div class="ribbon red-ribbon"></div>
-      <main class="sainternet-main mdl-layout__content">
-        <div class="sainternet-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
-            <div class="sainternet-catchphrase">
-              <i id="sainternet-phrases">…breaking the Internet, since 2016.</i>
-            </div>
-          </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="welcome">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
-            <h3><span class="embiggen">Welcome</span></h3>
-            <picture>
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.webp" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
-            </picture>
-            <p align="center">
-              Welcome to Sainternet.
-            </p>
-            <p>
-              Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
-            </p>
-            <p>
-              This site details some of those things, and could be considered one of those things itself.
-            </p>
-          </div>
-        </div>
-      </main>
-    <footer class="sainternet-footer mdl-mini-footer">
-      <div class="mdl-mini-footer--left-section">
-        <ul class="mdl-mini-footer--link-list">
-          <li>
-            <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer">
-              <span id="tooltip-email">
-                <icon class="fa-solid fa-at"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-email">
-                Email
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="https://discord.gg/NC7taVyn">
-              <span id="tooltip-discord">
-                <icon class="fa-brands fa-discord"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-discord">
-                Discord
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/saint-lascivious">
-              <span id="tooltip-github">
-                <icon class="fa-brands fa-github"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-github">
-                GitHub
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.reddit.com/user/saint-lascivious">
-              <span id="tooltip-reddit">
-                <icon class="fa-brands fa-reddit"></icon>
-              </span>
-              <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-reddit">
-                Reddit
-              </span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-  </body>
-</html>
+<!doctypehtml><html lang=en-NZ><meta content="saint-lascivious, 'Hayden Pearce'"name=author><meta charset=utf-8><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms."name=description><meta content="width=device-width,initial-scale=1,minimum-scale=1"name=viewport><title>sainternet.xyz</title><meta content=yes name=mobile-web-app-capable><link href=resources/icons/android-chrome-256x256.png rel=icon type=image/png sizes=256x256><link href=resources/icons/android-chrome-192x192.png rel=icon type=image/png sizes=192x192><link href=resources/icons/favicon-48x48.png rel=icon type=image/png sizes=48x48><link href=resources/icons/favicon-32x32.png rel=icon type=image/png sizes=32x32><link href=resources/icons/favicon-16x16.png rel=icon type=image/png sizes=16x16><link href=favicon.ico rel=icon sizes=any><link href=https://sainternet.xyz/index.html rel=canonical><meta content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, saint-lascivious, sainternet.xyz"name=keywords><link href=resources/stylesheets/material.red-blue.min.css rel=preload as=style><link href=resources/stylesheets/material.red-blue.min.css rel=stylesheet><link href=resources/stylesheets/sainternet.min.css rel=preload as=style><link href=resources/stylesheets/sainternet.min.css rel=stylesheet><link href=resources/stylesheets/ribbons.min.css rel=preload as=style><link href=resources/stylesheets/ribbons.min.css rel=stylesheet><link href=resources/stylesheets/img.min.css rel=preload as=style><link href=resources/stylesheets/img.min.css rel=stylesheet><link href=https://fonts.googleapis.com rel=preconnect><link href=https://fonts.gstatic.com rel=preconnect crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"rel=preload as=style><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"rel=stylesheet><link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel=preload as=style><link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel=stylesheet><link href=resources/fontawesome/css/fontawesome.min.css rel=preload as=style><link href=resources/fontawesome/css/fontawesome.min.css rel=stylesheet><link href=resources/fontawesome/css/solid.min.css rel=preload as=style><link href=resources/fontawesome/css/solid.min.css rel=stylesheet><link href=resources/fontawesome/css/brands.min.css rel=preload as=style><link href=resources/fontawesome/css/brands.min.css rel=stylesheet><link href=resources/images/wurmple.webp rel=preload as=image type=image/webp><link href=resources/images/wurmple-shiny.webp rel=preload as=image type=image/webp><script async src=resources/javascript/material.min.js></script><script async src=resources/javascript/random_phrase.min.js></script><script async src=resources/javascript/sainternet.min.js></script><link href=newsandupdates.html rel=prefetch as=document><link href=newsandupdates.html rel=prerender><link href=filtereddns.html rel=prefetch as=document><link href=filtereddns.html rel=prerender><link href=pokedexoverdns.html rel=prefetch as=document><link href=pokedexoverdns.html rel=prerender><link href=projects.html rel=prefetch as=document><link href=projects.html rel=prerender><link href=discord.gg rel=dns-prefetch><link href=github.com rel=dns-prefetch><link href=www.reddit.com rel=dns-prefetch><div class="mdl-js-layout mdl-layout mdl-layout--fixed-header sainternet-layout"><header class="mdl-layout__header mdl-shadow--4dp"><div class=mdl-layout__header-row><span class="embiggen mdl-layout-title">sainternet.xyz</span><div class=mdl-layout-spacer></div><nav class="mdl-navigation mdl-layout--large-screen-only"><a href=#welcome class="embiggen mdl-navigation__link"><b>Home</b></a> <a href=newsandupdates.html class="embiggen mdl-navigation__link">News and Updates</a> <a href=filtereddns.html class="embiggen mdl-navigation__link">Filtered DNS</a> <a href=pokedexoverdns.html class="embiggen mdl-navigation__link">Pokédex over DNS</a> <a href=projects.html class="embiggen mdl-navigation__link">Popular Projects</a></nav></div></header><div class=mdl-layout__drawer><span class="embiggen mdl-layout-title">sainternet.xyz</span><nav class=mdl-navigation><a href=#welcome class="embiggen mdl-navigation__link"><b>Home</b></a> <a href=newsandupdates.html class="embiggen mdl-navigation__link">News and Updates</a> <a href=filtereddns.html class="embiggen mdl-navigation__link">Filtered DNS</a> <a href=pokedexoverdns.html class="embiggen mdl-navigation__link">Pokédex over DNS</a> <a href=projects.html class="embiggen mdl-navigation__link">Popular Projects</a></nav></div><div class="red-ribbon ribbon"></div><main class="mdl-layout__content sainternet-main"><div class="mdl-grid sainternet-container"><div class="mdl-cell mdl-cell--2-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div><div class="mdl-cell content mdl-cell--8-col mdl-shadow--8dp sainternet-navigation"><div class=sainternet-catchphrase><i id=sainternet-phrases>…breaking the Internet, since 2016.</i></div></div></div><div class="mdl-grid sainternet-container"id=welcome><div class="mdl-cell mdl-cell--2-col mdl-cell--hide-phone mdl-cell--hide-tablet"></div><div class="mdl-cell content mdl-cell--8-col mdl-shadow--16dp sainternet-content"><h3><span class=embiggen>Welcome</span></h3><picture><source media="(prefers-color-scheme: dark)"srcset=resources/images/wurmple-shiny.webp type=image/webp><img alt="Image supplied not illustrative, the author is not a Pokémon."height=480 src=resources/images/wurmple.webp width=480></picture><p align=center>Welcome to Sainternet.<p>Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.<p>This site details some of those things, and could be considered one of those things itself.</div></div></main><footer class="mdl-mini-footer sainternet-footer"><div class=mdl-mini-footer--left-section><ul class=mdl-mini-footer--link-list><li><a href=mailto:saint@sainternet.xyz rel="noopener noreferrer"target=_blank><span id=tooltip-email><icon class="fa-at fa-solid"></icon></span><span class="mdl-tooltip mdl-tooltip--top"for=tooltip-email>Email</span></a><li><a href=https://discord.gg/NC7taVyn><span id=tooltip-discord><icon class="fa-brands fa-discord"></icon></span><span class="mdl-tooltip mdl-tooltip--top"for=tooltip-discord>Discord</span></a><li><a href=https://github.com/saint-lascivious><span id=tooltip-github><icon class="fa-brands fa-github"></icon></span><span class="mdl-tooltip mdl-tooltip--top"for=tooltip-github>GitHub</span></a><li><a href=https://www.reddit.com/user/saint-lascivious><span id=tooltip-reddit><icon class="fa-brands fa-reddit"></icon></span><span class="mdl-tooltip mdl-tooltip--top"for=tooltip-reddit>Reddit</span></a></ul></div></footer>
